# napi-bash

./: INSTALL  INSTALL.md  Makefile  Makefile.am  README.md  autoclean.sh  autogen.sh  bundle.js  configure.ac  index.html  params.json  style.css  test.sh
completion/: Makefile  Makefile.am  completion.bash  completion.zsh
completion/zsh/: _napi-bash
lib/: Makefile.am
lib/napi-bash/fill_fields/: cli.inc  xml.inc
lib/napi-bash/gui_msg/: growlnotify.inc  notify_send.inc  terminal_notifier.inc
lib/napi-bash/subfmt_convert/fps/: ffprobe.inc  mediainfo.inc  mplayer.inc  mpv.inc
man/: Makefile  Makefile.am  napi-bash.1  napi-bash.3  napi-bash.5
