fill_fields__incdir = $(bindir)/../lib/napi-bash/fill_fields/
fill_fields__inc_DATA = napi-bash/fill_fields/*.inc

subfmt_convert__fps__incdir = $(bindir)/../lib/napi-bash/subfmt_convert/fps/
subfmt_convert__fps__inc_DATA = napi-bash/subfmt_convert/fps/*.inc

gui_msg__incdir = $(bindir)/../lib/napi-bash/gui_msg/
gui_msg__inc_DATA = napi-bash/gui_msg/*.inc
